<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundColor"
    tools:context=".fragments.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/fredoka_one"
                android:paddingHorizontal="8dp"
                android:text="@string/informacoes_de_usuario"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="38sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/fredoka_one"
                android:text="@string/nome"
                android:textColor="@color/textColorSecondary"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_header" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/input_style"
                android:fontFamily="@font/fredoka_one"
                android:hint="@string/digite_seu_nome"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/textColorLight"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_name_label" />

            <TextView
                android:id="@+id/text_class_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/fredoka_one"
                android:text="@string/turma"
                android:textColor="@color/textColorSecondary"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_name" />

            <EditText
                android:id="@+id/edit_class"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/input_style"
                android:fontFamily="@font/fredoka_one"
                android:hint="@string/digite_qual_a_sua_turma"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/textColorLight"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_class_label" />


            <TextView
                android:id="@+id/text_avatar_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/fredoka_one"
                android:text="@string/avatar"
                android:textColor="@color/textColorSecondary"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_class" />

            <TextView
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/primary_chip_view_selector"
                android:drawablePadding="6dp"
                android:fontFamily="@font/fredoka_one"
                android:maxLines="1"
                android:paddingVertical="20dp"
                android:paddingTop="20dp"
                android:text="@string/salvar"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:drawableTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_avatar_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>