<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.RestartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fredoka_one"
            android:paddingHorizontal="8dp"
            android:text="@string/o_tempo_acabou"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="38sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/fredoka_one"
            android:padding="8dp"
            android:text="@string/seu_resultado"
            android:textAlignment="center"
            android:textColor="@color/textColorSecondary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/text_header"
            app:layout_constraintStart_toStartOf="@id/text_header"
            app:layout_constraintTop_toBottomOf="@id/text_header" />

        <TextView
            android:id="@+id/text_count_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/fredoka_one"
            android:text="0"
            android:textColor="@color/lightGreen"
            android:textSize="54sp"
            app:layout_constraintEnd_toStartOf="@id/text_count_wrong"
            app:layout_constraintStart_toStartOf="@id/text_header"
            app:layout_constraintTop_toBottomOf="@id/text_message" />

        <TextView
            android:id="@+id/text_count_wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one"
            android:text="0"
            android:textColor="@color/lightRed"
            android:textSize="54sp"
            app:layout_constraintEnd_toEndOf="@id/text_header"
            app:layout_constraintStart_toEndOf="@id/text_count_right"
            app:layout_constraintTop_toTopOf="@id/text_count_right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/acertos"
            android:textColor="@color/lightGreen"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="@id/text_count_right"
            app:layout_constraintStart_toStartOf="@id/text_count_right"
            app:layout_constraintTop_toBottomOf="@id/text_count_right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/erros"
            android:textColor="@color/lightRed"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="@id/text_count_wrong"
            app:layout_constraintStart_toStartOf="@id/text_count_wrong"
            app:layout_constraintTop_toBottomOf="@id/text_count_wrong" />

        <TextView
            android:id="@+id/button_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_chip_view_selector"
            android:drawablePadding="6dp"
            android:fontFamily="@font/fredoka_one"
            android:maxLines="1"
            android:paddingHorizontal="40dp"
            android:paddingVertical="20dp"
            android:paddingTop="20dp"
            android:text="@string/reiniciar"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:drawableLeftCompat="@drawable/ic_restart"
            app:drawableTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_message" />

        <TextView
            android:id="@+id/button_view_leaderboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/secondary_chip_view_selector"
            android:drawablePadding="6dp"
            android:fontFamily="@font/fredoka_one"
            android:maxLines="1"
            android:paddingHorizontal="32dp"
            android:paddingVertical="20dp"
            android:text="@string/ver_placar"
            android:textColor="@color/primary"
            android:textSize="22sp"
            app:drawableLeftCompat="@drawable/ic_trophy"
            app:drawableTint="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_restart" />

        <TextView
            android:id="@+id/text_max_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/sua_maior_pontua_o_0"
            android:textColor="@color/textColorSecondary"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@id/button_view_leaderboard"
            app:layout_constraintStart_toStartOf="@id/button_view_leaderboard"
            app:layout_constraintTop_toBottomOf="@id/button_view_leaderboard" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one"
            android:text="v1.0.0"
            android:textColor="@color/textColorSecondary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageView
            android:id="@+id/image_settings_button"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:clickable="true"
            android:contentDescription="@string/configuracoes"
            android:focusable="true"
            android:padding="6dp"
            android:src="@drawable/ic_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/textColorSecondary" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>